<resources>
    <string name="app_name">소복소복</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 약추가 -->
    <string name="person_take_pill">내가 먹을 약이에요</string>
    <string name="pill_count_msg">1개 더 추가할 수 있어요</string>
    <string name="pill_add_save">저장</string>
    <string name="add_new_pill">새로운 약 추가하기</string>
    <string name="can_save_5pills">복약 중인 약을 포함해 \n 최대 5개까지 저장할 수 있어요</string>
    <string name="add_pill">내 약 추가하기</string>

    <!-- Main -->
    <string name="menu_home">홈</string>
    <string name="menu_share">공유</string>
    <string name="menu_notice">알림</string>
    <string name="menu_pill_add">약추가</string>
    <string name="pill_add_pill_time">오전 8:00</string>
    <string name="pill_add_pill_time_msg">몇시에 약을 드셔야 하나요?</string>
    <string name="pill_add_pill_cycle_msg">얼마나 자주 먹는 약인가요?</string>
    <string name="pill_add_pill_date_msg">복약 기간을 선택해 주세요</string>
    <string name="pill_add_pill_name_msg">약 이름</string>
    <string name="pill_add_pill_person_msg">약 먹을 사람</string>
    <string name="pill_add_pill_person_me">나</string>
    <string name="pill_add_selected_pill_person_msg">내가 먹을 약이에요</string>
    <string name="pill_add_write_pill_name">약 이름을 작성해 주세요</string>
    <string name="pill_add_more_pill_add">함께 먹는 약이 있나요?</string>
    <string name="pill_add_pill_date">2020.01.22 ~</string>
    <string name="pill_add_everyday">매일</string>
    <string name="pill_add_specific_day">특정 요일</string>
    <string name="pill_add_specific_period">특정 기간</string>
    <string name="pill_add_finish">완료</string>
    <string name="pill_add_pill_cycle_text">월, 수</string>
    <string name="pill_add_finish_my_pill_list_msg">내 약 목록</string>
    <string name="pill_info_pill_name">하하 오메가입니다</string>
    <string name="pill_info_date">2022.01.01 - 2022.01.02</string>
    <string name="pill_info_cycle">1주에 한번</string>
    <string name="pill_info_time">오후 11:00, 오후 12:00, 오후 10:00</string>
    <string name="pill_add_finish_save">저장</string>

    <!-- Share Request-->
    <string name="share_request_msg">공유 요청하기</string>
    <string name="share_request_search_msg">추가할 사람의 닉네임을 입력해 주세요</string>
    <string name="share_request_search_nickname">닉네임 검색</string>
    <string name="share_request_search_empty">앗! 검색한 닉네임이 없어요</string>
    <string name="share_request_save_msg">님을 어떤 이름으로 저장할까요?</string>
    <string name="share_request_save_notice_msg">내가 저장한 이름은 상대방에게 공개되지 않아요</string>
    <string name="share_request_save_error_more">2자 이상 입력 가능해요</string>
    <string name="share_request_save_error_special">특수문자 입력은 불가능해요</string>
    <string name="share_request_save_text_count">%d/10</string>
    <string name="share_request_save_hint_msg">2~10자의 한글, 영문, 숫자</string>
    <string name="request">요청하기</string>
    <string name="share_request_calendar_message">캘린더 공유 요청을 보냈어요!</string>
    <string name="share_request_calendar_message_detail">상대방이 요청을 수락하면,\n상대방의 캘린더를 볼 수 있어요</string>
    <string name="share_request_limit_message">캘린더 공유는 5명까지만 가능해요</string>


    <!-- Home 약 리스트   -->
    <string name="edit">수정</string>
    <string name="edit_finish">완료</string>
    <string name="not_ate">아직 안 먹었어요</string>
    <string name="already_ate">먹었어요</string>

    <!-- Calendar -->
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="month">월</string>
    <string name="week">주</string>

    <!-- Home -->
    <string name="home_main_msg">소중한 %s님\n오늘도 약 꼭 챙겨 드세요</string>
    <string name="home_pill_list_empty">아직 등록한 약이 없어요!\n약을 추가해 주세요</string>
    <string name="share_pill_list_empty">아직 등록된 약이 없어요!\n약을 전송해 볼까요?</string>

    <!-- Share -->
    <string name="share_empty_msg_title">소중한 사람을 추가해 보세요!</string>
    <string name="share_empty_msg_content">소중한 사람에게 캘린더 공유를 요청하면\n상대방의 복약 기록을 확인하고,\n응원을 보낼 수 있어요</string>
    <string name="share_request_add">추가하기</string>

    <!-- Notice -->
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="confirm">확인</string>
    <string name="notice_title">소중한 복이님의 알림</string>
    <string name="notice_empty_message">아직 도착한 알림이 없어요!</string>
    <string name="notice_detail">상세보기</string>
    <string name="notice_detail_title">약 일정</string>
    <string name="notice_detail_pill_cycle">약 먹는 주기</string>
    <string name="notice_detail_pill_time">약 먹는 시간</string>
    <string name="notice_detail_pill_period">약 먹는 기간</string>


    <!-- Setting -->
    <string name="setting">설정</string>
    <string name="contact_email">이메일로 문의하기</string>
    <string name="terms_of_use">약관 및 정책</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="logout">로그아웃</string>
    <string name="cancel_membership">회원 탈퇴하기</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="sobok_terms_of_service">소복소복 서비스 이용약관</string>
    <string name="withdrawal_question">소복소복을 떠나시나요?</string>
    <string name="withdrawal_detail_message">탈퇴하면 그 동안의 복약기록와\n받은 스티커를 포함한 모든 정보가 사라져요</string>
    <string name="withdrawal_reason">탈퇴하려는 이유가 궁금해요 (선택)</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="withdrawal_reason_hint">적어주시는 여러분의 소중한 의견은 서비스 개선에 큰 도움이 돼요:)</string>
    <string name="logout_message">정말 로그아웃 하시나요?</string>
    <string name="cancel">취소</string>
    <string name="withdrawal_reason_count">%d/2000</string>

    <!-- MyInfo -->
    <string name="my_info">내 정보</string>
    <string name="my_pill_management">내 약 관리</string>
    <string name="nickname_edit">닉네임 수정</string>
    <string name="double_check">중복확인</string>
    <string name="nickname_error_message">2~10자리의 한글, 영문, 숫자만 사용 가능해요</string>
    <string name="my_info_note">약 개수 제한\n최대 5개까지 등록할 수 있어요</string>
    <string name="nickname_already_in_use_message">이미 사용 중인 닉네임이에요</string>
    <string name="usable_nickname_message">사용 가능한 닉네임이에요</string>
    <string name="please_double_check">닉네임 중복확인을 해주세요</string>

</resources>
