<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isMonth"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_calendar_top_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/gray800_sub"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12월" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_calendar_top_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_fill_gray150_radius_6"
            android:paddingVertical="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="6dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_calendar_top_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semi_bold"
                android:textColor="@color/gray800_sub"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{isMonth ? @string/month : @string/week}" />

            <ImageView
                android:id="@+id/iv_calendar_top_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:src="@drawable/ic_more_16"
                app:layout_constraintBottom_toBottomOf="@id/tv_calendar_top_order"
                app:layout_constraintStart_toEndOf="@id/tv_calendar_top_order"
                app:layout_constraintTop_toTopOf="@id/tv_calendar_top_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_calendar_top_day_of_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_calendar_top_order">

            <TextView
                android:id="@+id/tv_calendar_top_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

            <TextView
                android:id="@+id/tv_calendar_top_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:textAppearance="@style/CalendarTopDayOfWeekTextStyle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>