<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.myinfo.SettingMainFragment">

        <TextView
            android:id="@+id/tv_contact_email"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="21dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_vertical"
            android:text="@string/contact_email"
            android:textColor="@color/black_sub"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ib_more_email"
            app:layout_constraintEnd_toStartOf="@id/ib_more_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_more_email" />

        <ImageButton
            android:id="@+id/ib_more_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_more_48_gray500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_terms_of_use"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_vertical"
            android:text="@string/terms_of_use"
            android:textColor="@color/black_sub"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ib_more_terms_of_use"
            app:layout_constraintEnd_toStartOf="@id/ib_more_email"
            app:layout_constraintStart_toStartOf="@id/tv_contact_email"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_email" />

        <ImageButton
            android:id="@+id/ib_more_terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more_48_gray500"
            app:layout_constraintEnd_toEndOf="@id/ib_more_email"
            app:layout_constraintTop_toBottomOf="@id/ib_more_email" />

        <TextView
            android:id="@+id/tv_open_source_license"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center_vertical"
            android:text="@string/open_source_license"
            android:textColor="@color/black_sub"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ib_more_open_source_license"
            app:layout_constraintEnd_toStartOf="@id/ib_more_terms_of_use"
            app:layout_constraintStart_toStartOf="@id/tv_terms_of_use"
            app:layout_constraintTop_toBottomOf="@id/tv_terms_of_use" />

        <ImageButton
            android:id="@+id/ib_more_open_source_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more_48_gray500"
            app:layout_constraintEnd_toEndOf="@id/ib_more_terms_of_use"
            app:layout_constraintTop_toBottomOf="@id/ib_more_terms_of_use" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pretendard_medium"
            android:paddingEnd="50dp"
            android:text="@string/logout"
            android:textColor="@color/gray500_sub"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_open_source_license"
            app:layout_constraintTop_toBottomOf="@+id/tv_open_source_license" />

        <TextView
            android:id="@+id/tv_withdrawal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/cancel_membership"
            android:textColor="@color/gray500_sub"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tv_logout"
            app:layout_constraintStart_toStartOf="@+id/tv_open_source_license"
            app:layout_constraintTop_toBottomOf="@+id/tv_logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>