<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reasonLength"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".presentation.view.myinfo.SettingWithdrawalFragment">

        <TextView
            android:id="@+id/tv_withdrawal_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/withdrawal_question"
            android:textColor="@color/black_sub"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_withdrawal_detail_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/withdrawal_detail_message"
            android:textColor="@color/gray500_sub"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tv_withdrawal_question"
            app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_question" />

        <TextView
            android:id="@+id/tv_withdrawal_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@string/withdrawal_reason"
            android:textColor="@color/gray800_sub"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tv_withdrawal_detail_message"
            app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_detail_message" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_write_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_fill_gray100_border_gray300_radius_12"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_reason">

            <EditText
                android:id="@+id/et_withdrawal_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:fontFamily="@font/pretendard_medium"
                android:gravity="top"
                android:hint="@string/withdrawal_reason_hint"
                android:inputType="text|textMultiLine"
                android:maxLength="2001"
                android:maxLines="5"
                android:minLines="5"
                android:textColor="@color/black_sub"
                android:textColorHint="@color/gray500_sub"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/pretendard_medium"
                android:text="@{@string/withdrawal_reason_count(reasonLength)}"
                android:textColor="@color/gray600_sub"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_withdrawal_reason" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_withdrawal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_fill_mint"
            android:fontFamily="@font/pretendard_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/withdrawal"
            android:textColor="@color/white_sub"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>