<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.share.ShareEmptyFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btn_share_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_illust_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_share_empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pretendard_semi_bold"
                android:gravity="center"
                android:text="@string/share_empty_msg_title"
                android:textColor="@color/gray900_sub"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/iv_empty"
                app:layout_constraintStart_toStartOf="@id/iv_empty"
                app:layout_constraintTop_toBottomOf="@id/iv_empty" />

            <TextView
                android:id="@+id/tv_share_empty_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/pretendard_regular"
                android:gravity="center"
                android:text="@string/share_empty_msg_content"
                android:textColor="@color/gray500_sub"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_share_empty_title"
                app:layout_constraintStart_toStartOf="@id/tv_share_empty_title"
                app:layout_constraintTop_toBottomOf="@id/tv_share_empty_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btn_share_request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_fill_mint"
            android:fontFamily="@font/pretendard_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/share_request_add"
            android:textColor="@color/white_sub"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>