<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.share.request.ShareRequestSaveFragment">

        <TextView
            android:id="@+id/tv_share_request_save_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/pretendard_semi_bold"
            android:text="@string/share_request_save_msg"
            android:textColor="@color/gray800_sub"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_share_request_save_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_share_request_search_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_share_request_save_msg"
            app:layout_constraintTop_toBottomOf="@id/tv_share_request_save_msg">

            <EditText
                android:id="@+id/et_share_request_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:background="#00000000"
                android:hint="@string/share_request_search_nickname"
                android:textColor="@color/gray900_sub"
                android:textColorHint="@color/gray400_sub"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_share_request_save_delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_share_request_save_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/ic_text_close_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_share_request_save_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/pill_color_red"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/cl_share_request_save_bar"
            app:layout_constraintTop_toBottomOf="@id/cl_share_request_save_bar"
            tools:text="@string/share_request_save_error_special" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_share_request_save_notion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/rectangle_fill_gray_100_radius_8"
            app:layout_constraintEnd_toEndOf="@id/cl_share_request_save_bar"
            app:layout_constraintStart_toStartOf="@id/cl_share_request_save_bar"
            app:layout_constraintTop_toBottomOf="@id/tv_share_request_save_error">

            <ImageView
                android:id="@+id/iv_share_request_save_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_notice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/share_request_save_notice_msg"
                android:textColor="@color/gray500_sub"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_share_request_save_notice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_share_request_save_notice"
                app:layout_constraintTop_toTopOf="@id/iv_share_request_save_notice" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>